fixed spacing on text

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -85,6 +85,7 @@ body {
   padding-top: 190px;
   margin-top: 0px;
   margin-bottom: $std0;
+  height: 110px;
   text-align: center;
   text-transform: uppercase;
 
